<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/show_bg"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    tools:context="com.sardegnaisoladicavalli.example.showjumpingchrono.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rider_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/rider_name"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/fontSizeTitleBig" />

                <TextView
                    android:id="@+id/horse_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/horse_name"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/fontSizeTitle" />

                <com.sardegnaisoladicavalli.example.showjumpingchrono.CustomChrono
                    android:id="@+id/chronometer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/ButtonNormal"
                    android:text="Chronometer"
                    android:textSize="@dimen/chronoSize" />

                <LinearLayout
                    android:id="@+id/penalties_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/one_pen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/button_margin"
                        android:layout_marginLeft="@dimen/button_sideMargin"
                        android:layout_marginRight="@dimen/button_sideMargin"
                        android:layout_marginTop="@dimen/button_margin"
                        android:layout_weight="1"
                        android:text="@string/one_pen"
                        android:textColor="@color/textColor"
                        android:onClick="addTimePens"/>

                    <Button
                        android:id="@+id/four_pens"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/button_margin"
                        android:layout_marginLeft="@dimen/button_sideMargin"
                        android:layout_marginRight="@dimen/button_sideMargin"
                        android:layout_marginTop="@dimen/button_margin"
                        android:layout_weight="1"
                        android:text="@string/four_pens"
                        android:textColor="@color/textColor"
                        android:onClick="addCoursePens"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/chrono_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_marginLeft="@dimen/button_sideMargin"
                    android:layout_marginRight="@dimen/button_sideMargin"
                    android:layout_marginTop="@dimen/button_margin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/startButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/chrono_start"
                        android:textColor="@color/textColor"
                        android:onClick="startChrono"/>

                    <Button
                        android:id="@+id/stopButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/chrono_stop"
                        android:onClick="stopChrono"
                        android:textColor="@color/textColor" />

                </LinearLayout>

            </LinearLayout>

            <!--        <de.codecrafters.tableview.TableView
                        xmlns:table="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/result_table"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_below="@id/main_container"
                        android:layout_marginLeft="@dimen/button_sideMargin"
                        android:layout_marginRight="@dimen/button_sideMargin"
                        android:layout_marginBottom="@dimen/button_margin"
                        android:layout_marginTop="@dimen/button_margin"
                        android:layout_gravity="center_horizontal"
                        android:divider="@android:color/black"
                        android:dividerHeight="1dip">

                   </de.codecrafters.tableview.TableView>-->


            <TableLayout
                android:id="@+id/result_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_container"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginLeft="@dimen/table_sideMargin"
                android:layout_marginRight="@dimen/table_sideMargin"
                android:layout_marginTop="@dimen/button_margin"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/text_margin"
                        android:padding="@dimen/table_element_padding"
                        android:text="@string/table_layout_chrono"
                        android:textAllCaps="true"
                        android:textColor="@color/scoreColor" />

                    <TextView
                        android:id="@+id/time_set"
                        android:gravity="center"
                        android:padding="@dimen/table_element_padding"
                        android:text="0"
                        android:textColor="@color/scoreColor" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/text_margin"
                        android:padding="@dimen/table_element_padding"
                        android:text="@string/table_layout_course_pens"
                        android:textAllCaps="true"
                        android:textColor="@color/scoreColor" />

                    <TextView
                        android:id="@+id/course_pens"
                        android:gravity="center"
                        android:padding="@dimen/table_element_padding"
                        android:text="0"
                        android:textColor="@color/scoreColor" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/text_margin"
                        android:padding="@dimen/table_element_padding"
                        android:text="@string/table_layout_time_pens"
                        android:textAllCaps="true"
                        android:textColor="@color/scoreColor" />

                    <TextView
                        android:id="@+id/time_pens"
                        android:gravity="center"
                        android:padding="@dimen/table_element_padding"
                        android:text="0"
                        android:textColor="@color/scoreColor" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/text_margin"
                        android:padding="@dimen/table_element_padding"
                        android:text="@string/table_layout_total_pens"
                        android:textAllCaps="true"
                        android:textColor="@color/scoreColor" />

                    <TextView
                        android:id="@+id/total_pens"
                        android:gravity="center"
                        android:padding="@dimen/table_element_padding"
                        android:text="0"
                        android:textColor="@color/scoreColor" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_table"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/screenBottom_margin"
                android:text="@string/reset"
                android:textColor="@color/textColor"
                android:onClick="resetAll"/>

        </RelativeLayout>


    </ScrollView>


</LinearLayout>
